--- a/my_unarchive/Makefile
+++ b/my_unarchive/Makefile
@@ -16,8 +16,8 @@ CFLAGS	+=	-Wextra -Werror -Wall
 NAME	=	my_unarchive
 
 SRCS	=	get_next_line.c	\
-		main.c	\
-		my_strcat.c
+		my_strcat.c	\
+		my_unarchive.c
 
 OBJS	=	$(SRCS:.c=.o)
 
